EDIT index.html/css file

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
               <label class="bookerLabel" for="checkOut">Check Out</label>
               <input class="bookerInput" type="datetime-local" id="checkOut" name="checkOut">
             </div>
+            <div class="submitButtonContainer">
+              <input class="submit" type="submit" id="submitButton">
+            </div>
           </form>
         </div>
       </div>
